
## Import FEN
add_executable(Undo ${CMAKE_CURRENT_LIST_DIR}/undo_move.cpp)
target_link_libraries(Undo PRIVATE CHESS)

add_test(board::undo::capture::bishop Undo "8/7b/8/8/8/8/8/1B6 w - - 0 1" "b1h7")
add_test(board::undo::quiet::d4 Undo "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1" "d2d4")
add_test(board::undo::quiet::e4 Undo "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1" "e2e4")

### Checks
add_test(board::undo::checks::r1 Undo "4k3/8/8/8/8/r7/8/4K3 b - - 0 1" "a3e3")

### Checkmates
add_test(board::undo::checkmates::r1 Undo "4k3/8/8/8/8/r7/7r/4K3 b - - 0 1" "a3a1")

### Castling
add_test(board::undo::castling::KW Undo "r3k2r/8/8/8/8/8/8/R3K2R w KQkq - 0 1" "O-O")
add_test(board::undo::castling::QW Undo "r3k2r/8/8/8/8/8/8/R3K2R w KQkq - 0 1" "O-O-O")
add_test(board::undo::castling::KB Undo "r3k2r/8/8/8/8/8/8/R3K2R w KQkq - 0 1" "o-o")
add_test(board::undo::castling::QB Undo "r3k2r/8/8/8/8/8/8/R3K2R w KQkq - 0 1" "o-o-o")

### En Passant
add_test(board::undo::EP1 Undo "4k3/8/8/8/3Pp3/8/8/3K4 b - d3 0 1" "e4d3")
add_test(board::undo::EP2 Undo "4k3/8/8/3pP3/8/8/8/4K3 w - d6 0 2" "e5d6")
add_test(board::undo::EP3 Undo "rnbqkbnr/p1pp1ppp/8/4P3/1pP2B2/4P3/PP3PPP/RN1QKBNR b KQkq c3 0 5" "b4c3")

### Promotion
add_test(board::undo::P1 Undo "4k3/P7/8/8/8/8/8/4K3 w - - 0 1" "a7a8q")
add_test(board::undo::P2 Undo "4k3/P7/8/8/8/8/8/4K3 w - - 0 1" "a7a8r")
add_test(board::undo::P3 Undo "4k3/P7/8/8/8/8/8/4K3 w - - 0 1" "a7a8b")
add_test(board::undo::P4 Undo "4k3/P7/8/8/8/8/8/4K3 w - - 0 1" "a7a8n")
add_test(board::undo::P5 Undo "4k3/8/8/8/8/8/1p4p1/N1Q1KB1R b - - 0 1" "b2a1q")
add_test(board::undo::P6 Undo "4k3/8/8/8/8/8/1p4p1/N1Q1KB1R b - - 0 1" "b2a1r")
add_test(board::undo::P7 Undo "4k3/8/8/8/8/8/1p4p1/N1Q1KB1R b - - 0 1" "b2a1b")
add_test(board::undo::P8 Undo "4k3/8/8/8/8/8/1p4p1/N1Q1KB1R b - - 0 1" "b2a1n")

## Attacks
add_executable(Attacks ${CMAKE_CURRENT_LIST_DIR}/attacks.cpp)
target_link_libraries(Attacks PRIVATE CHESS)

add_test(board::attacks::B1 Attacks "8/8/8/8/8/8/8/B7 w - - 0 1" 9241421688590303744)
add_test(board::attacks::B2 Attacks "8/8/8/8/8/8/8/7B w - - 0 1" 72624976668147712)
add_test(board::attacks::B3 Attacks "B7/8/8/8/8/8/8/8 w - - 0 1" 567382630219904)
add_test(board::attacks::B4 Attacks "7B/8/8/8/8/8/8/8 w - - 0 1" 18049651735527937)
add_test(board::attacks::B5 Attacks "8/8/8/8/3B4/8/8/8 w - - 0 1" 9241705379636978241)
add_test(board::attacks::B6 Attacks "8/8/8/3B4/8/8/8/8 w - - 0 1" 4693335752243822976)
add_test(board::attacks::B7 Attacks "8/8/8/8/4B3/8/8/8 w - - 0 1" 108724279602332802)
add_test(board::attacks::B8 Attacks "8/8/8/4B3/8/8/8/8 w - - 0 1" 9386671504487645697)
add_test(board::attacks::b1 Attacks "8/8/8/8/8/8/8/b7 b - - 0 1" 9241421688590303744)
add_test(board::attacks::b2 Attacks "8/8/8/8/8/8/8/7b b - - 0 1" 72624976668147712)
add_test(board::attacks::b3 Attacks "b7/8/8/8/8/8/8/8 b - - 0 1" 567382630219904)
add_test(board::attacks::b4 Attacks "7b/8/8/8/8/8/8/8 b - - 0 1" 18049651735527937)
add_test(board::attacks::b5 Attacks "8/8/8/8/3b4/8/8/8 b - - 0 1" 9241705379636978241)
add_test(board::attacks::b6 Attacks "8/8/8/3b4/8/8/8/8 b - - 0 1" 4693335752243822976)
add_test(board::attacks::b7 Attacks "8/8/8/8/4b3/8/8/8 b - - 0 1" 108724279602332802)
add_test(board::attacks::b8 Attacks "8/8/8/4b3/8/8/8/8 b - - 0 1" 9386671504487645697)

add_test(board::attacks::N1 Attacks "8/8/8/8/8/8/8/N7 w - - 0 1" 132096)
add_test(board::attacks::N2 Attacks "8/8/8/8/8/8/8/7N w - - 0 1" 4202496)
add_test(board::attacks::N3 Attacks "N7/8/8/8/8/8/8/8 w - - 0 1" 1128098930098176)
add_test(board::attacks::N4 Attacks "7N/8/8/8/8/8/8/8 w - - 0 1" 9077567998918656)
add_test(board::attacks::N5 Attacks "8/8/8/8/3N4/8/8/8 w - - 0 1" 22136263676928)
add_test(board::attacks::N6 Attacks "8/8/8/3N4/8/8/8/8 w - - 0 1" 5666883501293568)
add_test(board::attacks::N7 Attacks "8/8/8/8/4N3/8/8/8 w - - 0 1" 44272527353856)
add_test(board::attacks::N8 Attacks "8/8/8/4N3/8/8/8/8 w - - 0 1" 11333767002587136)
add_test(board::attacks::n1 Attacks "8/8/8/8/8/8/8/n7 b - - 0 1" 132096)
add_test(board::attacks::n2 Attacks "8/8/8/8/8/8/8/7n b - - 0 1" 4202496)
add_test(board::attacks::n3 Attacks "n7/8/8/8/8/8/8/8 b - - 0 1" 1128098930098176)
add_test(board::attacks::n4 Attacks "7n/8/8/8/8/8/8/8 b - - 0 1" 9077567998918656)
add_test(board::attacks::n5 Attacks "8/8/8/8/3n4/8/8/8 b - - 0 1" 22136263676928)
add_test(board::attacks::n6 Attacks "8/8/8/3n4/8/8/8/8 b - - 0 1" 5666883501293568)
add_test(board::attacks::n7 Attacks "8/8/8/8/4n3/8/8/8 b - - 0 1" 44272527353856)
add_test(board::attacks::n8 Attacks "8/8/8/4n3/8/8/8/8 b - - 0 1" 11333767002587136)

add_test(board::attacks::R1 Attacks "8/8/8/8/8/8/8/R7 w - - 0 1" 72340172838076926)
add_test(board::attacks::R2 Attacks "8/8/8/8/8/8/8/7R w - - 0 1" 9259542123273814143)
add_test(board::attacks::R3 Attacks "R7/8/8/8/8/8/8/8 w - - 0 1" 18302911464433844481)
add_test(board::attacks::R4 Attacks "7R/8/8/8/8/8/8/8 w - - 0 1" 9187484529235886208)
add_test(board::attacks::R5 Attacks "8/8/8/8/3R4/8/8/8 w - - 0 1" 578721386714368008)
add_test(board::attacks::R6 Attacks "8/8/8/3R4/8/8/8/8 w - - 0 1" 578722409201797128)
add_test(board::attacks::R7 Attacks "8/8/8/8/4R3/8/8/8 w - - 0 1" 1157442769150545936)
add_test(board::attacks::R8 Attacks "8/8/8/4R3/8/8/8/8 w - - 0 1" 1157443723186933776)
add_test(board::attacks::r1 Attacks "8/8/8/8/8/8/8/r7 b - - 0 1" 72340172838076926)
add_test(board::attacks::r2 Attacks "8/8/8/8/8/8/8/7r b - - 0 1" 9259542123273814143)
add_test(board::attacks::r3 Attacks "r7/8/8/8/8/8/8/8 b - - 0 1" 18302911464433844481)
add_test(board::attacks::r4 Attacks "7r/8/8/8/8/8/8/8 b - - 0 1" 9187484529235886208)
add_test(board::attacks::r5 Attacks "8/8/8/8/3r4/8/8/8 b - - 0 1" 578721386714368008)
add_test(board::attacks::r6 Attacks "8/8/8/3r4/8/8/8/8 b - - 0 1" 578722409201797128)
add_test(board::attacks::r7 Attacks "8/8/8/8/4r3/8/8/8 b - - 0 1" 1157442769150545936)
add_test(board::attacks::r8 Attacks "8/8/8/4r3/8/8/8/8 b - - 0 1" 1157443723186933776)

add_test(board::attacks::Q1 Attacks "8/8/8/8/8/8/8/Q7 w - - 0 1" 9313761861428380670)
add_test(board::attacks::Q2 Attacks "8/8/8/8/8/8/8/7Q w - - 0 1" 9332167099941961855)
add_test(board::attacks::Q3 Attacks "Q7/8/8/8/8/8/8/8 w - - 0 1" 18303478847064064385)
add_test(board::attacks::Q4 Attacks "7Q/8/8/8/8/8/8/8 w - - 0 1" 9205534180971414145)
add_test(board::attacks::Q5 Attacks "8/8/8/8/3Q4/8/8/8 w - - 0 1" 9820426766351346249)
add_test(board::attacks::Q6 Attacks "8/8/8/3Q4/8/8/8/8 w - - 0 1" 5272058161445620104)
add_test(board::attacks::Q7 Attacks "8/8/8/8/4Q3/8/8/8 w - - 0 1" 1266167048752878738)
add_test(board::attacks::Q8 Attacks "8/8/8/4Q3/8/8/8/8 w - - 0 1" 10544115227674579473)
add_test(board::attacks::q1 Attacks "8/8/8/8/8/8/8/q7 b - - 0 1" 9313761861428380670)
add_test(board::attacks::q2 Attacks "8/8/8/8/8/8/8/7q b - - 0 1" 9332167099941961855)
add_test(board::attacks::q3 Attacks "q7/8/8/8/8/8/8/8 b - - 0 1" 18303478847064064385)
add_test(board::attacks::q4 Attacks "7q/8/8/8/8/8/8/8 b - - 0 1" 9205534180971414145)
add_test(board::attacks::q5 Attacks "8/8/8/8/3q4/8/8/8 b - - 0 1" 9820426766351346249)
add_test(board::attacks::q6 Attacks "8/8/8/3q4/8/8/8/8 b - - 0 1" 5272058161445620104)
add_test(board::attacks::q7 Attacks "8/8/8/8/4q3/8/8/8 b - - 0 1" 1266167048752878738)
add_test(board::attacks::q8 Attacks "8/8/8/4q3/8/8/8/8 b - - 0 1" 10544115227674579473)

add_test(board::attacks::K1 Attacks "8/8/8/8/8/8/8/K7 w - - 0 1" 770)
add_test(board::attacks::K2 Attacks "8/8/8/8/8/8/8/7K w - - 0 1" 49216)
add_test(board::attacks::K3 Attacks "K7/8/8/8/8/8/8/8 w - - 0 1" 144959613005987840)
add_test(board::attacks::K4 Attacks "7K/8/8/8/8/8/8/8 w - - 0 1" 4665729213955833856)
add_test(board::attacks::K5 Attacks "8/8/8/8/3K4/8/8/8 w - - 0 1" 120596463616)
add_test(board::attacks::K6 Attacks "8/8/8/3K4/8/8/8/8 w - - 0 1" 30872694685696)
add_test(board::attacks::K7 Attacks "8/8/8/8/4K3/8/8/8 w - - 0 1" 241192927232)
add_test(board::attacks::K8 Attacks "8/8/8/4K3/8/8/8/8 w - - 0 1" 61745389371392)
add_test(board::attacks::k1 Attacks "8/8/8/8/8/8/8/k7 b - - 0 1" 770)
add_test(board::attacks::k2 Attacks "8/8/8/8/8/8/8/7k b - - 0 1" 49216)
add_test(board::attacks::k3 Attacks "k7/8/8/8/8/8/8/8 b - - 0 1" 144959613005987840)
add_test(board::attacks::k4 Attacks "7k/8/8/8/8/8/8/8 b - - 0 1" 4665729213955833856)
add_test(board::attacks::k5 Attacks "8/8/8/8/3k4/8/8/8 b - - 0 1" 120596463616)
add_test(board::attacks::k6 Attacks "8/8/8/3k4/8/8/8/8 b - - 0 1" 30872694685696)
add_test(board::attacks::k7 Attacks "8/8/8/8/4k3/8/8/8 b - - 0 1" 241192927232)
add_test(board::attacks::k8 Attacks "8/8/8/4k3/8/8/8/8 b - - 0 1" 61745389371392)

add_test(board::attacks::blocked::B1 Attacks "8/8/8/8/8/8/rr6/Br6 w - - 0 1" 512)
add_test(board::attacks::blocked::B2 Attacks "8/8/8/8/8/8/6rr/6rB w - - 0 1" 16384)
add_test(board::attacks::blocked::B3 Attacks "Br6/rr6/8/8/8/8/8/8 w - - 0 1" 562949953421312)
add_test(board::attacks::blocked::B4 Attacks "6rB/6rr/8/8/8/8/8/8 w - - 0 1" 18014398509481984)

add_test(board::attacks::blocked::R1 Attacks "8/8/8/8/8/8/bb6/Rb6 w - - 0 1" 258)
add_test(board::attacks::blocked::R2 Attacks "8/8/8/8/8/8/6bb/6bR w - - 0 1" 32832)
add_test(board::attacks::blocked::R3 Attacks "Rb6/bb6/8/8/8/8/8/8 w - - 0 1" 144396663052566528)
add_test(board::attacks::blocked::R4 Attacks "6bR/6bb/8/8/8/8/8/8 w - - 0 1" 4647714815446351872)

add_test(board::attacks::blocked::Q1 Attacks "8/8/8/8/8/8/bb6/Qb6 w - - 0 1" 770)
add_test(board::attacks::blocked::Q2 Attacks "8/8/8/8/8/8/6bb/6bQ w - - 0 1" 49216)
add_test(board::attacks::blocked::Q3 Attacks "Qb6/bb6/8/8/8/8/8/8 w - - 0 1" 144959613005987840)
add_test(board::attacks::blocked::Q4 Attacks "6bQ/6bb/8/8/8/8/8/8 w - - 0 1" 4665729213955833856)
