# Tests
## Import FEN
add_executable(ImportFEN ${CMAKE_CURRENT_LIST_DIR}/import_FEN.cpp)
target_link_libraries(ImportFEN PRIVATE CHESS)

add_test(Import_FEN_StartPos ImportFEN "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1")

## Import Algebraic
add_executable(ImportAlgebraic ${CMAKE_CURRENT_LIST_DIR}/import_algebraic.cpp)
target_link_libraries(ImportAlgebraic PRIVATE CHESS)

add_test(Import_Algebraic_KingsPawn ImportAlgebraic "1. e4" "rnbqkbnr/pppppppp/8/8/4P3/8/PPPP1PPP/RNBQKBNR b KQkq ")
add_test(Import_Algebraic_QueensGambit ImportAlgebraic "1. d4 d5 2. c4" "rnbqkbnr/ppp1pppp/8/3p4/2PP4/8/PP2PPPP/RNBQKBNR b KQkq ")
add_test(Import_Algebraic_FoolsMate ImportAlgebraic "1. e4 e5 2. Bc4 Bc5 3. Qf3 d6 4. Qxf7#" "rnbqk1nr/ppp2Qpp/3p4/2b1p3/2B1P3/8/PPPP1PPP/RNB1K1NR b KQkq ")
add_test(Import_Algebraic_KingCastle ImportAlgebraic "1. g3 d5 2. Bg2 Bf5 3. Nf3 e6 4. O-O" "rn1qkbnr/ppp2ppp/4p3/3p1b2/8/5NP1/PPPPPPBP/RNBQ1RK1 b kq ")
add_test(Import_Algebraic_QueenCastle ImportAlgebraic "1. d4 d5 2. Bf4 Bf5 3. Nc3 e6 4. e3 Nf6 5. Qd2 Bb4 6. O-O-O" "rn1qk2r/ppp2ppp/4pn2/3p1b2/1b1P1B2/2N1P3/PPPQ1PPP/2KR1BNR b kq ")
add_test(Import_Algebraic_EnPassant ImportAlgebraic "1. d4 e5 2. d5 c5 3. dxc6" "rnbqkbnr/pp1p1ppp/2P5/4p3/8/8/PPP1PPPP/RNBQKBNR b KQkq ")
add_test(Import_Algebraic_DoubleEnPassant_a ImportAlgebraic "1. d4 Na6 2. d5 Nb8 3. f4 Na6 4. f5 e5 5. dxe6" "r1bqkbnr/pppp1ppp/n3P3/5P2/8/8/PPP1P1PP/RNBQKBNR b KQkq ")
add_test(Import_Algebraic_DoubleEnPassant_b ImportAlgebraic "1. d4 Na6 2. d5 Nb8 3. f4 Na6 4. f5 e5 5. fxe6" "r1bqkbnr/pppp1ppp/n3P3/3P4/8/8/PPP1P1PP/RNBQKBNR b KQkq ")
add_test(Import_Algebraic_Promotion_Q ImportAlgebraic "1. h4 h5 2. g4 hxg4 3. h5 Rh6 4. Nf3 Ra6 5. h6 Rb6 6. h7 Ra6 7. h8=Q" "rnbqkbnQ/ppppppp1/r7/8/6p1/5N2/PPPPPP2/RNBQKB1R b KQq ")
add_test(Import_Algebraic_Promotion_N ImportAlgebraic "1. h4 h5 2. g4 hxg4 3. h5 Rh6 4. Nf3 Ra6 5. h6 Rb6 6. h7 Ra6 7. h8=N" "rnbqkbnN/ppppppp1/r7/8/6p1/5N2/PPPPPP2/RNBQKB1R b KQq ")
add_test(Import_Algebraic_Promotion_R ImportAlgebraic "1. h4 h5 2. g4 hxg4 3. h5 Rh6 4. Nf3 Ra6 5. h6 Rb6 6. h7 Ra6 7. h8=R" "rnbqkbnR/ppppppp1/r7/8/6p1/5N2/PPPPPP2/RNBQKB1R b KQq ")
add_test(Import_Algebraic_Promotion_B ImportAlgebraic "1. h4 h5 2. g4 hxg4 3. h5 Rh6 4. Nf3 Ra6 5. h6 Rb6 6. h7 Ra6 7. h8=B" "rnbqkbnB/ppppppp1/r7/8/6p1/5N2/PPPPPP2/RNBQKB1R b KQq ")
add_test(Import_Algebraic_Promotion_q ImportAlgebraic "1. a4 b5 2. axb5 a5 3. Ra3 a4 4. Rb3 a3 5. Rc3 a2 6. Rb3 a1=Q" "rnbqkbnr/2pppppp/8/1P6/8/1R6/1PPPPPPP/qNBQKBNR w Kkq ")
add_test(Import_Algebraic_Promotion_n ImportAlgebraic "1. a4 b5 2. axb5 a5 3. Ra3 a4 4. Rb3 a3 5. Rc3 a2 6. Rb3 a1=N" "rnbqkbnr/2pppppp/8/1P6/8/1R6/1PPPPPPP/nNBQKBNR w Kkq ")
add_test(Import_Algebraic_Promotion_r ImportAlgebraic "1. a4 b5 2. axb5 a5 3. Ra3 a4 4. Rb3 a3 5. Rc3 a2 6. Rb3 a1=R" "rnbqkbnr/2pppppp/8/1P6/8/1R6/1PPPPPPP/rNBQKBNR w Kkq ")
add_test(Import_Algebraic_Promotion_b ImportAlgebraic "1. a4 b5 2. axb5 a5 3. Ra3 a4 4. Rb3 a3 5. Rc3 a2 6. Rb3 a1=B" "rnbqkbnr/2pppppp/8/1P6/8/1R6/1PPPPPPP/bNBQKBNR w Kkq ")
add_test(Import_Algebraic_CapturePromotion_Q ImportAlgebraic "1. a4 Nh6 2. a5 Ng8 3. a6 Nh6 4. axb7 Ng8 5. bxa8=Q" "Qnbqkbnr/p1pppppp/8/8/8/8/1PPPPPPP/RNBQKBNR b KQk ")
add_test(Import_Algebraic_CapturePromotion_N ImportAlgebraic "1. a4 Nh6 2. a5 Ng8 3. a6 Nh6 4. axb7 Ng8 5. bxa8=N" "Nnbqkbnr/p1pppppp/8/8/8/8/1PPPPPPP/RNBQKBNR b KQk ")
add_test(Import_Algebraic_CapturePromotion_R ImportAlgebraic "1. a4 Nh6 2. a5 Ng8 3. a6 Nh6 4. axb7 Ng8 5. bxa8=R" "Rnbqkbnr/p1pppppp/8/8/8/8/1PPPPPPP/RNBQKBNR b KQk ")
add_test(Import_Algebraic_CapturePromotion_B ImportAlgebraic "1. a4 Nh6 2. a5 Ng8 3. a6 Nh6 4. axb7 Ng8 5. bxa8=B" "Bnbqkbnr/p1pppppp/8/8/8/8/1PPPPPPP/RNBQKBNR b KQk ")
add_test(Import_Algebraic_CapturePromotion_q ImportAlgebraic "1. Nc3 h5 2. Nb1 h4 3. Nc3 h3 4. Nb1 hxg2 5. Nc3 gxh1=Q" "rnbqkbnr/ppppppp1/8/8/8/2N5/PPPPPP1P/R1BQKBNq w Qkq ")
add_test(Import_Algebraic_CapturePromotion_n ImportAlgebraic "1. Nc3 h5 2. Nb1 h4 3. Nc3 h3 4. Nb1 hxg2 5. Nc3 gxh1=N" "rnbqkbnr/ppppppp1/8/8/8/2N5/PPPPPP1P/R1BQKBNn w Qkq ")
add_test(Import_Algebraic_CapturePromotion_r ImportAlgebraic "1. Nc3 h5 2. Nb1 h4 3. Nc3 h3 4. Nb1 hxg2 5. Nc3 gxh1=R" "rnbqkbnr/ppppppp1/8/8/8/2N5/PPPPPP1P/R1BQKBNr w Qkq ")
add_test(Import_Algebraic_CapturePromotion_b ImportAlgebraic "1. Nc3 h5 2. Nb1 h4 3. Nc3 h3 4. Nb1 hxg2 5. Nc3 gxh1=B" "rnbqkbnr/ppppppp1/8/8/8/2N5/PPPPPP1P/R1BQKBNb w Qkq ")
add_test(Import_Algebraic_FullGame_1 ImportAlgebraic "1. e4 c6 2. d4 d5 3. e5 Bf5 4. g4 Bg6 5. h4 h6 6. h5 Be4 7. e6 Bxh1 8. exf7+ Kxf7 9. Qe2 Nf6 10. f3 Qd6 11. Nh3 Qg3+ 12. Qf2 Qxf2+ 13. Kxf2 Nxg4+ 14. fxg4 Be4 15. Nc3 Bxc2 16. Bf4 Nd7 17. Re1 e6 18. Bg2 Bb4 19. a3 Bxc3 20. bxc3 Rhe8 21. g5 e5 22. g6+ Kf6 23. dxe5+ Nxe5 24. Kg3 Nd3 25. Rf1 Nxf4 26. Rxf4+ Ke6 27. Nf2 Kd6 28. Ng4 Ref8 29. Rb4 b6 30. Bh3 Rae8 31. a4 Be4 32. Ne3 Rf3+ 33. Kh4 Rfxe3 34. a5 Bf5 35. axb6 Rxh3# 0-1" "4r3/p5p1/1Ppk2Pp/3p1b1P/1R5K/2P4r/8/8 w - ")
add_test(Import_Algebraic_FullGame_2 ImportAlgebraic "1. d4 d5 2. Nf3 Nf6 3. c4 e6 4. Nc3 Bb4 5. cxd5 exd5 6. Bg5 Nbd7 7. e3 c5 8. Rac1 Qa5 9. Qb3 c4 10. Qc2 Ne4 11. Bf4 Qxa2 12. Nd2 Bxc3 13. bxc3 Qxc2 14. Rxc2 Nxd2 15. Kxd2 Nf6 16. Be5 Ne4+ 17. Ke2 f6 18. Bf4 Bf5 19. Rcc1 Kd7 20. f3 Nd6 21. g4 Bd3+ 22. Kd2 Bxf1 23. Rhxf1 Rhe8 24. Rca1 b6 25. Rfb1 Kc6 26. Ra4 Nb5 27. Ra6 Kb7 28. Rba1 g5 29. Bg3 Re6 30. Bf2 Rae8 31. Ra6a2 Kc6 32. Ra2a6 Re6e7 33. h3 Kb7 34. Ra6a2 Kc6 35. Ra2a6 Kb7 36. Ra6a2 Kc6 37. Ra2a6 Kb7 1/2-1/2" "4r3/pk2r2p/Rp3p2/1n1p2p1/2pP2P1/2P1PP1P/3K1B2/R7 w - ")
